[backend] feat(threat-arsenal): fix and add tests
Signed-off-by: Marine LM <marine.lemezo@filigran.io>